Resolve The constructor Integer(int) is deprecated
new Integer() to Integer.valueOf()